<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4000E0E0"
    tools:context=".MainActivity3">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertguideline"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="vertical" />

    <TextView
        android:id="@+id/bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_hoo"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertguideline"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/middle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hihi"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertguideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/click_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/click_me"
        app:layout_constraintLeft_toRightOf="@+id/vertguideline"
        app:layout_constraintTop_toBottomOf="@+id/top_view"
        />

    <TextView
        android:id="@+id/top_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt"
        android:textSize="50sp"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/vertguideline" />

</androidx.constraintlayout.widget.ConstraintLayout>